post box overflow fixed (tags)

--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -21,3 +21,8 @@ section,
   width: fit-content;
   margin: 2rem auto 2rem auto;
 }
+
+.tags {
+  width: 80%;
+  word-wrap: break-word;
+}
